Fixed the image

--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
 </head>
 <body>
   <header>
-    <a class="nav-logo" href="#"><img src="/images/logo.svg" alt="web logo"></a>
+    <a class="nav-logo" href="#"><img src="./images/logo.svg" alt="web logo"></a>
     <div id="dropdown-icon">
-      <img src="/images/icon-menu.svg" alt="menu" id="menu-icon">
+      <img src="./images/icon-menu.svg" alt="menu" id="menu-icon">
     </div>
     <nav>   
       <div id="nav-bar">
-        <a class="nav-link" href="#" id="features">Features <img src="/images/icon-arrow-down.svg" class="arrow-down" id="arrow-down-feat"></a>
+        <a class="nav-link" href="#" id="features">Features <img src="./images/icon-arrow-down.svg" class="arrow-down" id="arrow-down-feat"></a>
           <div id="features-dropdown" class="dropdown">
-            <a class="features-dropdown-link" href="#"><img src="/images/icon-todo.svg"> Todo List</a>
-            <a class="features-dropdown-link" href="#"><img src="/images/icon-calendar.svg" alt=""> Calendar</a>
-            <a class="features-dropdown-link" href="#"><img src="/images/icon-reminders.svg" alt=""> Reminders</a>
-            <a class="features-dropdown-link" href="#"><img src="/images/icon-planning.svg" alt=""> Planning</a>
+            <a class="features-dropdown-link" href="#"><img src="./images/icon-todo.svg"> Todo List</a>
+            <a class="features-dropdown-link" href="#"><img src="./images/icon-calendar.svg" alt=""> Calendar</a>
+            <a class="features-dropdown-link" href="#"><img src="./images/icon-reminders.svg" alt=""> Reminders</a>
+            <a class="features-dropdown-link" href="#"><img src="./images/icon-planning.svg" alt=""> Planning</a>
           </div>
-        <a class="nav-link" href="#" id="company">Company <img src="/images/icon-arrow-down.svg" class="arrow-down" id="arrow-down-company"></a>
+        <a class="nav-link" href="#" id="company">Company <img src="./images/icon-arrow-down.svg" class="arrow-down" id="arrow-down-company"></a>
           <div id="company-dropdown" class="dropdown">
             <a class="company-dropdown-link" href="#">History</a>
             <a class="company-dropdown-link" href="#">Our Team</a>
@@ -55,10 +55,10 @@
         <span id="paragraph"><p><span class="text">Get your team in sync, no matter your location. </span><span class="text">Streamline processes, create team rituals, and </span><span class="text">watch productivity soar.</span></p></span>
         <span><button>Learn more</button></span>
         <div id="sponsors">
-          <img src="/images/client-databiz.svg" alt="client-databiz logo">
-          <img src="/images/client-audiophile.svg" alt="client-audiophile logo">
-          <img src="/images/client-meet.svg" alt="meet logo">
-          <img src="/images/client-maker.svg" alt="maker logo">
+          <img src="./images/client-databiz.svg" alt="client-databiz logo">
+          <img src="./images/client-audiophile.svg" alt="client-audiophile logo">
+          <img src="./images/client-meet.svg" alt="meet logo">
+          <img src="./images/client-maker.svg" alt="maker logo">
         </div>
       </div>
       <div class="container" id="container-hero">
